fix: pagination middle align

--- a/client/components/decorators/pagination/pagination.less
+++ b/client/components/decorators/pagination/pagination.less
@@ -28,7 +28,7 @@
   li {
     &:not(.page-direction) {
       display: inline-block;
-      margin: 2px;
+      margin: 0 2px;
     }
     &:last-child {
       float: right;
